Switched to Apache's Base64 codecs